--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ body {
 #header {
     width: 100%;
     height: 100vh;
-    background-image: url('images/melcow.png');
+    background-image: url('melcow.png');
     background-size: cover;
     background-position: center;
 }
@@ -296,7 +296,7 @@ nav .fa-solid{
 @media only screen and (max-width: 600px)
 {
 #header {
-background-image: url(images/me.png);
+background-image: url(me.png);
 }
 .header-text{
 margin-top: 100%; 
