--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ body {
 #header {
     width: 100%;
     height: 100vh;
-    background-image: url('melcow.png');
+    background-image: url('welcome.png');
     background-size: cover;
     background-position: center;
 }
