--- a/style.css
+++ b/style.css
@@ -139,6 +139,11 @@ font-size: 50px;
 font-weight: 500;
 color: #fff;
  }
+.top-right {
+  position: absolute;
+  top: 10px;
+  right: 65px;
+}
 .tab-titles{
 display: flex;
 margin: 20px 0 40px;
