--- a/style.css
+++ b/style.css
@@ -32,8 +32,12 @@ html {
 
 
 body {
-    background: #080808;
-    color: #fff;
+  background: linear-gradient(to right, #004AAD, #CB6CE6);
+  color: #fff;
+  margin: 0;
+  padding: 0;
+  font-family: 'Poppins', sans-serif;
+  box-sizing: border-box;
 }
 
 #header {
