--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ body {
     height: 100vh;
     background-image: url('melcow.png');
     background-size: cover;
+    background-attachment: fixed;
     background-position: center;
 }
 .container{
