--- a/style.css
+++ b/style.css
@@ -307,6 +307,7 @@ nav .fa-solid{
 {
 #header {
 background-image: url(me.png);
+    background-attachment: scroll;
 }
 .header-text{
 margin-top: 100%; 
