--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ html {
 
 
 body {
-  background: linear-gradient(to right, #004AAD, #CB6CE6);
+  background: #000000;
   color: #fff;
   margin: 0;
   padding: 0;
