--- a/style.css
+++ b/style.css
@@ -306,7 +306,7 @@ nav .fa-solid{
 @media only screen and (max-width: 600px)
 {
 #header {
-background-image: url(me.png);
+background-image: url(that.png);
 background-attachment: scroll;
 }
 .header-text{
