--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ body {
 #header {
     width: 100%;
     height: 100vh;
-    background-image: url('images/melcow.png');
+    background-image: url('melcow.png');
     background-attachment: fixed;
     background-size: cover;
     background-position: center;
@@ -332,7 +332,7 @@ nav .fa-solid{
 @media only screen and (max-width: 600px)
 {
 #header {
-background-image: url(images/me.png);
+background-image: url(me.png);
 background-attachment: scroll;
 }
 .header-text{
