--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ body {
 #header {
     width: 100%;
     height: 100vh;
-    background-image: url('melcow.png');
+    background-image: url('images/melcow.png');
     background-attachment: fixed;
     background-size: cover;
     background-position: center;
@@ -202,7 +202,7 @@ margin: 20px 0 40px;
 .tab-contents ul li span
 {
 color:#9CE4DD;
-fontsize:14px;
+font-size:14px;
 }
 .tab-contents {
   display: none;
@@ -215,11 +215,14 @@ fontsize:14px;
 /* -----------------contact---------------- */
 
 /* Center-align the content in both .contact-left and .contact-right */
+.contact-left {
+  margin-top: -125px;
+}
 .contact-left, .contact-right {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  text-align: center;
+  align-items:flex-start;
+  text-align: left;
 }
 
 /* Update the margin for better spacing between elements */
@@ -275,7 +278,7 @@ fontsize:14px;
 /* Center-align the form content */
 .contact-right form {
   width: 100%;
-  text-align: center;
+  
 }
 
 /* Center-align the form inputs and textarea */
@@ -287,10 +290,10 @@ form textarea {
   outline: none;
   background: #262626;
   padding: 15px;
-  margin: 10px auto; /* Center-align the inputs and textarea vertically */
+  margin: 15px 0; /* Center-align the inputs and textarea vertically */
   color: #fff;
   font-size: 18px;
-  border-radius: 6px;
+  border-radius: 10px;
 }
 
 /* ---------------Copyright Notice------------ */
@@ -332,7 +335,7 @@ nav .fa-solid{
 @media only screen and (max-width: 600px)
 {
 #header {
-background-image: url(me.png);
+background-image: url(images/me.png);
 background-attachment: scroll;
 }
 .header-text{
@@ -396,7 +399,7 @@ nav ul .fa-solid{
 }
 }
 .sub-title{
-  font-size: 70px;
+  font-size: 30px;
 }
 form input,
 form textarea {
@@ -410,5 +413,4 @@ form textarea {
   color: #fff;
   font-size: 18px;
   border-radius: 6px;
-}
 }
